k8s/ingres.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quant-api
  namespace: quant-cloud
spec:
  rules:
  - host: quant.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: quant-api
            port:
              number: 80
